# iotests

./: CMakeLists.txt  README.md  meson.build
sequential/: CMakeLists.txt  sequentialio.cc
